--- a/webring.html
+++ b/webring.html
@@ -16,7 +16,7 @@ The BSTRDS Network is a small webring for people who feel alienated by the mains
 <li>No members yet.</li>    
 </ul>
 
-<p>Last updated: 2023.04.08</p>
+<p><i>Last updated: 2023.04.08</i></p>
     
 <hr>
     
