--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
 <body>
 
-<b>Welcome to BSTRDS.net</b>
+<h2>Welcome to BSTRDS.net</h2>
 
 <p>
 I have — once again — created a new website. This one’s a personal blog and a small webring to (eventually) connect you to likeminded personal websites.</p>
