--- a/webring.html
+++ b/webring.html
@@ -1,11 +1,11 @@
 <html lang=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport>
 <head>
-<title>BSTRDS.net</title>
+<title>BSTRDS Network</title>
 </head>
     
 <body>
 
-<b>BSTRDS Network</b>
+<h2>BSTRDS Network</h2>
 
 <p>
 The BSTRDS Network is a small webring for people who feel alienated by the mainstream internet and social media landscape. This is a modest attempt to encourage and connect with likeminded netizens and carve out a small corner of cyberspace for us to share.</p>
