--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport>
+<!doctype html><html lang=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport><title>BSTRDS.net</title>
     
 <p><b>Welcome to BSTRDS.net</b><br>
 A personal website and eventualy a webring.</p>
