--- a/webring.html
+++ b/webring.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport>
+<!doctype html><html lang=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport><title>BSTRDS Network</title>
     
 <p><b>BSTRDS Network</b></p>
 
