--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html lang=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport><title>BSTRDS.net</title>
     
 <p><b>Welcome to BSTRDS.net</b><br>
-A personal website and eventualy a webring.</p>
+A personal website and eventually a webring.</p>
 
 <p><b>About</b><br>
 Name: Matt<br>
