--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
-<!doctype html><html lang=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport><title>BSTRDS.net</title>
+<!doctype html><html lang=en>
     
-<p><b>Welcome to BSTRDS.net</b><br>
-A personal website and eventually a webring.</p>
+<head>
+<meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport><title>BSTRDS.net</title>
+<link rel="stylesheet" href="css/style.css">
+</head>
+    
+<h1>mwtext.com</h1>
+<p>A personal website, public notebook, and blog.<br><br></p>
 
 <p><b>About</b><br>
-Name: Matt<br>
-Pronouns: he/him<br>
+Name: Matt W.<br>
+Pronouns: He/him<br>
 Birthdate: 1988<br>
 Bloodtype: A+<br>
 Location: Midwest (US)<br>
 Politics: Pinko Leftist<br>
 Enneatype: 9w1<br>
-Contact: bstrds@pm.me</p>
+Contact: mwtext@pm.me</p>
 
 <p><b>Status</b><br>
 Reading: Between Two Fires<br>
-Listening: NIN – The Fragile<br>
-Playing: Grounded + WWE 2K22</p>
+Listening: Otoboke Beaver – Itekoma Hits<br>
+Playing: Grounded + Sludge Life</p>
 
-<p><b>The Webring</b><br>
+<p><b>Webring</b><br>
 <a href="webring.html">BSTRDS Network</a></p>
 
-<p><b>Posts from 2023</b><br>
-<a href="posts/launch.txt">Launch Party</a></p>
-
-<p><b>More</b><br>
-<a href="more/reading.txt">Personal Reading Log</a><br>
-<a href="more/podcasts.txt">Recommended Podcasts</a></p>
+<p><b>Posts</b><br>
+Coming soon.</a><br>
+</p>
 
 <p><b>Outro</b><br>
 That's all for now. Thanks for visiting.<br>
-<i>Last updated: 2023.04.08</i></p>
+<i>Last updated: 2023.04.15</i></p>
