--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport><title>mwtext.com</title>
 <link rel="stylesheet" href="css/style.css">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
 </head>
     
 <h1>mwtext.com</h1>
