--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Listening: Otoboke Beaver – Itekoma Hits<br>
 Playing: Grounded + Sludge Life</p>
 
 <p><b>Posts</b><br>
-Coming soon.</a><br>
+Coming soon. Check back later.</a><br>
 </p>
 
 <p><b>Outro</b><br>
