--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html><html lang=en>
     
 <head>
-<meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport><title>mwtext.com</title>
+<meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport>
+<title>mwtext.com</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="manifest" href="/site.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
@@ -18,7 +19,7 @@ Bloodtype: A+<br>
 Location: Midwest (US)<br>
 Politics: Pinko Leftist<br>
 Enneatype: 9w1<br>
-Contact: mwtext@pm.me</p>
+Contact: mail@mwtext.com</p>
 
 <p><b>Status</b><br>
 Reading: Between Two Fires<br>
