--- a/index.html
+++ b/index.html
@@ -32,4 +32,4 @@ Coming soon. Check back later.</a><br>
 
 <p><b>Outro</b><br>
 That's all for now. Thanks for visiting.<br>
-<i>Last updated: 2023.04.15</i></p>
+<i>Updated: 3:22 PM 2023-04-15</i></p>
