--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@ Playing: Grounded + Sludge Life</p>
 Coming soon. Check back later.</a><br>
 </p>
 
+<p><b>Text Files</b><br>
+<a href="files/reading.txt">Personal Reading Log</a><br>
+<a href="files/podcasts.txt">Recommended Podcasts</a><br>
+</p>
+
 <p><b>Outro</b><br>
 That's all for now. Thanks for visiting.<br>
 <i>Updated: 3:22 PM 2023-04-15</i></p>
