--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!doctype html><html lang=en>
+<!doctype html><html lang="en">
     
 <head>
-<meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport>
+<meta charset="utf-8"/><meta content="width=device-width,initial-scale=1" name="viewport">
 <title>mwtext.com</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="manifest" href="/site.webmanifest">
