--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
     
 <h1>mwtext.com</h1>
-<p>A personal website, public notebook, and blog.<br><br></p>
+<p>Amateur webmaster. Graphic designer. Anti-capitalist. Bad at writing. Likes video games, horror novels, breakfast food, and the independent web. Here to share some notes and maybe have a lil fun.<br><br></p>
 
 <p><b>About</b><br>
 Name: Matt W.<br>
@@ -26,15 +26,14 @@ Reading: Between Two Fires<br>
 Listening: Otoboke Beaver – Itekoma Hits<br>
 Playing: Grounded + Sludge Life</p>
 
-<p><b>Posts</b><br>
-Coming soon. Check back later.</a><br>
+<p><b>Notes</b><br>
+<a href="reading.html">Personal Reading Log</a><br>
 </p>
 
-<p><b>Text Files</b><br>
-<a href="files/reading.txt">Personal Reading Log</a><br>
-<a href="files/podcasts.txt">Recommended Podcasts</a><br>
+<p><b>Projects</b><br>
+Nothing yet. Check back later.<br>
 </p>
 
 <p><b>Outro</b><br>
 That's all for now. Thanks for visiting.<br>
-<i>Updated: 3:22 PM 2023-04-15</i></p>
+<i>Updated: 3:00 PM 2023-04-17</i></p>
