--- a/reading.html
+++ b/reading.html
@@ -11,11 +11,11 @@
 <h1>Reading Log</h1>
 <p>↩ <a href="index.html">Return to homepage</a><br><br></p>
 
-<p>Starting in 2021, I've been keeping a log of the books I've read. They are listed below, categorized by year, then in order of reading.</p>
+<p>I've been keeping a log of the books I've read since 2021. They are listed and rated below, categorized by year, then in order of reading.</p>
 
 <hr>
 
-<h3>2023</h3>
+<h2>2023</h2>
 
 <p>What Moves the Dead<br>T. Kingfisher<br>★★☆☆☆<br></p>
 
@@ -27,7 +27,7 @@
 
 <hr>
 
-<h3>2022</h3>
+<h2>2022</h2>
 
 <p>Universal Harvester<br>John Darnielle<br>★★★★☆</p>
 
@@ -37,7 +37,7 @@
 
 <hr>
 
-<h3>2021</h3>
+<h2>2021</h2>
 
 <p>In the House in the Dark of the Woods<br>Laird Hunt<br>★★★★★</p>
 
