--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
     
 <h1>mwtext.com</h1>
-<p>Amateur webmaster. Graphic designer. Anti-capitalist. Bad at writing. Likes video games, horror novels, breakfast food, and the independent web. Here to share some notes and maybe have a lil fun.<br><br></p>
+<p>Amateur webmaster. Graphic designer. Anti-capitalist. Bad at writing. Likes video games, horror novels, breakfast food, and the independent web. Here to share some notes and maybe have a lil fun.</p>
 
 <p><b>About</b><br>
 Name: Matt W.<br>
