--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@ Bloodtype: A+<br>
 Location: Midwest (US)<br>
 Politics: Pinko Leftist<br>
 Enneatype: 9w1<br>
-Contact: mail@mwtext.com</p>
+Contact: mail [at] mwtext.com</p>
 
 <p><b>Status</b><br>
 Reading: Between Two Fires<br>
-Listening: Otoboke Beaver – Itekoma Hits<br>
+Listening: IDLES – Ultra Mono<br>
 Playing: Grounded + Sludge Life</p>
 
 <p><b>Notes</b><br>
-<a href="reading.html">Personal Reading Log</a><br>
+<a href="reading.html">Reading</a><br>
+</p>
+
+<p><b>Files</b><br>
+<a href="daily.txt">Daily Journal</a><br>
 </p>
 
 <p><b>Projects</b><br>
