--- a/reading.html
+++ b/reading.html
@@ -9,9 +9,9 @@
 </head>
 
 <h1>Reading Log</h1>
-<p>↩ <a href="index.html">Return to homepage</a><br><br></p>
+<p>↩ <a href="index.html">Return to homepage</a></p>
 
-<p>I've been keeping a log of the books I've read since 2021. They are listed and rated below, categorized by year, then in order of reading.</p>
+<p>I've been keeping a log of the books I've read since 2021. They are listed and rated below, categorized by year, then in order of reading. Mostly horror fiction.</p>
 
 <hr>
 
@@ -141,5 +141,4 @@
 
 <hr>
 
-<p><b>Outro</b><br>
-That's all for now. Thanks for visiting.<br>
+<p>↑ <a href="#">Back to top</a><br>
