--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="utf-8"/><meta content="width=device-width,initial-scale=1" name="viewport">
 <title>mwtext.com</title>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="css/style.css">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
 </head>
     
 <h1>mwtext.com</h1>
@@ -27,11 +26,12 @@ Listening: IDLES – Ultra Mono<br>
 Playing: Grounded + Sludge Life</p>
 
 <p><b>Notes</b><br>
-<a href="reading.html">Reading</a><br>
+<a href="notes/manifesto.html">Mini Manifesto</a><br>
+<a href="notes/reading.html">Reading Log</a><br>
 </p>
 
 <p><b>Files</b><br>
-<a href="daily.txt">Daily Journal</a><br>
+<a href="files/daily.txt">daily.txt</a><br>
 </p>
 
 <p><b>Projects</b><br>
@@ -40,4 +40,4 @@ Nothing yet. Check back later.<br>
 
 <p><b>Outro</b><br>
 That's all for now. Thanks for visiting.<br>
-<i>Updated: 3:00 PM 2023-04-17</i></p>
+<i>Updated: 5:00 PM 2023-04-20</i></p>
