--- a/notes/reading.html
+++ b/notes/reading.html
@@ -2,16 +2,15 @@
     
 <head>
 <meta charset="utf-8"/><meta content="width=device-width,initial-scale=1" name="viewport">
-<title>mwtext.com</title>
-<link rel="stylesheet" href="css/style.css">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+<title>mwtext.com/reading</title>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="../css/style.css">
 </head>
 
 <h1>Reading Log</h1>
 <p>↩ <a href="index.html">Return to homepage</a></p>
 
-<p>I've been keeping a log of the books I've read since 2021. They are listed and rated below, categorized by year, then in order of reading. Mostly horror fiction.</p>
+<p>I've been keeping a log of the books I've read since 2021. They are listed and rated below, categorized by year, then in order of reading. Mostly horror fiction. Updated: 2023-04-20.</p>
 
 <hr>
 
