--- a/notes/manifesto.html
+++ b/notes/manifesto.html
@@ -8,7 +8,7 @@
 </head>
 
 <h1>Mini Manifesto</h1>
-<p>↩ <a href="..index.html">Return to homepage</a></p>
+<p>↩ <a href="../index.html">Return to homepage</a></p>
 
 <p>For better or worse, I love the internet. I love that there’s a tool that allows us to connect to one another in all sorts of weird and wonderful ways. It bums me out that it’s used for evil and that it’s a tool of exploitation for capitalism and that it’s a huge fucking mess. But it’s still a pretty neat thing, overall. The fact that we can set up little websites and express ourselves and that there’s a (small) chance that others may stumble across them and have these (often) tiny, fleeting connections is endlessly appealing. An entire ocean full of messages in bottles.</p>
 
