--- a/notes/reading.html
+++ b/notes/reading.html
@@ -8,7 +8,7 @@
 </head>
 
 <h1>Reading Log</h1>
-<p>↩ <a href="..index.html">Return to homepage</a></p>
+<p>↩ <a href="../index.html">Return to homepage</a></p>
 
 <p>I've been keeping a log of the books I've read since 2021. They are listed and rated below, categorized by year, then in order of reading. Mostly horror fiction. Updated: 2023-04-20.</p>
 
