--- a/notes/reading.html
+++ b/notes/reading.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/><meta content="width=device-width,initial-scale=1" name="viewport">
 <title>mwtext.com/reading</title>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" type="../image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="../css/style.css">
 </head>
 
