--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ Contact: mail [at] mwtext.com</p>
 
 <p><b>Status</b><br>
 Reading: Between Two Fires<br>
-Listening: IDLES – Ultra Mono<br>
+Listening: Refused – The Shape of Punk to Come<br>
 Playing: Grounded + Sludge Life</p>
 
 <p><b>Notes</b><br>
-<a href="notes/manifesto.html">Mini Manifesto</a><br>
+<a href="notes/manifesto.html">Manifesto</a><br>
 <a href="notes/reading.html">Reading Log</a><br>
 </p>
 
@@ -38,6 +38,8 @@ Playing: Grounded + Sludge Life</p>
 Nothing yet. Check back later.<br>
 </p>
 
-<p><b>Outro</b><br>
-That's all for now. Thanks for visiting.<br>
-<i>Updated: 5:00 PM 2023-04-20</i></p>
+<p><b>Exit</b><br>
+<a href="links.html">Links</a><br>
+</p>
+
+<i>Updated: 2:38 PM 2023-04-21</i></p>
