--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ Playing: Grounded + Sludge Life</p>
 
 <p><b>Notes</b><br>
 <a href="notes/manifesto.html">Manifesto</a><br>
-<a href="notes/reading.html">Reading Log</a><br>
+<a href="notes/edc.html">Everyday Carry</a><br>
+<a href="notes/reading.html">Reading</a><br>
 </p>
 
 <p><b>Files</b><br>
