--- a/links.html
+++ b/links.html
@@ -2,13 +2,13 @@
     
 <head>
 <meta charset="utf-8"/><meta content="width=device-width,initial-scale=1" name="viewport">
-<title>mwtext.com/links</title>
+<title>mwtext.com - links</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="css/style.css">
 </head>
     
 <h1>Links</h1>
-<p>↩ <a href="../index.html">Return to homepage</a></p>
+<p>↩ <a href="index.html">Return to homepage</a></p>
 
 <h2>Favorites</h2>
 <p><a href="https://thecreativeindependent.com/" target="_blank">The Creative Independent</a><br>
@@ -27,6 +27,7 @@
 <a href="https://korayer.de/" target="_blank">Koray Er</a><br>
 <a href="https://grossgirl94.neocities.org/" target="_blank">grossgirl94</a><br>
 <a href="https://devilsblush.neocities.org/" target="_blank">Devils Blush</a><br>
+<a href="https://www.jennyodell.com/" target="_blank">Jenny Odell</a><br>
 <a href="https://shishka.neocities.org/" target="_blank">Shishka</a></p>
 
 <h2>Webrings</h2>
