--- a/notes/manifesto.html
+++ b/notes/manifesto.html
@@ -25,7 +25,7 @@
 
 <h2>Regain independence.</h2>
 
-<p>I’m not someone who thinks it’s important that everything I post stays online in perpetuity. Part of the fun of all of this, to me, is its ephemeral nature. But it’s wild that we put so much trust in corporations when it comes to the content we put online. A CEO somewhere can decide that a platform isn’t making them enough money and huge swaths of user content can be gone in a flash. Words, photos, videos, memories, memorials. All outside of your control. And it’s wild that we trade so much for the simple privilege of posting content online. We allow our data to be harvested and our behavior to be monitored. We allow ourselves to be psychologically manipulated and experimented upon. And we allow misinformation (and occasionally hate speech) to be shoved in our faces.</p>
+<p>I’m not someone who thinks it’s important that everything I post stays online in perpetuity. Part of the fun of all of this, to me, is its ephemeral nature. But it’s wild that we put so much trust in corporations when it comes to the content we put online. A CEO somewhere can decide that a platform isn’t making them enough money and huge swaths of content can be gone in a flash. Words, photos, videos, memories, memorials. All outside of your control. And it’s wild that we trade so much for the simple privilege of posting content online. We allow our data to be harvested and our behavior to be monitored. We allow ourselves to be psychologically manipulated and experimented upon. And we allow misinformation and hate speech to be shoved in our faces.</p>
 
 <p>We’ve lost control of the content we post and we’re quickly losing control of the content we see. More and more of what you are exposed to on social media is decided by an inhuman algorithm. It’s getting harder and harder to see <i>only</i> the content from the people you care about. But how can I go about fighting all of this? How can I take back control of what I share and what I see? Again, the only method I know is to disengage and do my own thing, separate from these platforms and their control.</p>
 
@@ -47,5 +47,5 @@
 
 <hr>
 
-<p>Posted: 2023-04-20. Updated: 2023-04-21.
+<p>Posted: 2023-04-20. Updated: 2023-04-22.
 <p>↑ <a href="#">Back to top</a><br>
