--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>mwtext.com</h1>
 <p>Amateur webmaster. Graphic designer. Anti-capitalist. Bad at writing. Likes video games, horror novels, breakfast food, and the independent web. Here to share some notes and maybe have a lil fun.</p>
 <hr>
-<p><b>About</b><br>
+<h2>About</h2>
 Name: Matt W.<br>
 Pronouns: He/him<br>
 Birthdate: 1988<br>
@@ -19,23 +19,23 @@ Politics: Pinko Leftist<br>
 Enneatype: 9w1<br>
 Contact: mail [at] mwtext.com</p>
 <hr>
-<p><b>Status</b><br>
+<h2>Status</h2>
 Reading: Between Two Fires<br>
 Listening: Refused – The Shape of Punk to Come<br>
 Playing: Grounded + Sludge Life</p>
 <hr>
-<p><b>Notes</b><br>
+<h2>Notes</h2>
 <a href="notes/manifesto.html">Manifesto</a><br>
 <a href="notes/edc.html">Everyday Carry</a><br>
 <a href="notes/reading.html">Reading</a><br>
 </p>
 <hr>
-<p><b>Files</b><br>
+<h2>Files</h2>
 <a href="files/daily.txt">daily.txt</a><br>
 </p>
 <hr>
-<p><b>Exit</b><br>
+<h2>Exit</h2>
 <a href="links.html">Links</a><br>
 </p>
-
-<i>Updated: 5:04 PM 2023-04-21</i></p>
+<hr>
+<i>Updated: 2:31 PM 2023-04-22</i></p>
