--- a/index.html
+++ b/index.html
@@ -38,4 +38,4 @@ Playing: Grounded + Sludge Life</p>
 <a href="links.html">Links</a><br>
 </p>
 <hr>
-<i>Updated: 2:31 PM 2023-04-22</i></p>
+<p><i>Updated: 2:31 PM 2023-04-22</i></p>
