--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@ Playing: Grounded + Sludge Life</p>
 </p>
 <hr>
 <h2>Files</h2>
-<a href="files/daily.txt">daily.txt</a><br>
+<a href="daily.txt">daily.txt</a><br>
+<a href="feed.xml">feed.xml</a>
 </p>
 <hr>
 <h2>Exit</h2>
-<a href="links.html">Links</a><br>
+<a href="links.html">Links</a>
 </p>
 <hr>
-<p><i>Updated: 2:31 PM 2023-04-22</i></p>
+<p><i>Updated: 10:21 PM 2023-04-22</i></p>
