--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
     
 <h1>mwtext.com</h1>
-<p>Amateur webmaster. Graphic designer. Anti-capitalist. Bad at writing. Likes video games, horror novels, breakfast food, and the independent web. Here to share some notes and maybe have a lil fun.</p>
+<p>Amateur webmaster. Graphic designer. Anti-capitalist. Bad at writing. Likes video games, horror novels, breakfast food, and the internet. Here to share some notes and maybe have a lil fun.</p>
 <hr>
 <h2>About</h2>
 Name: Matt W.<br>
@@ -31,7 +31,7 @@ Playing: Grounded + Sludge Life</p>
 </p>
 <hr>
 <h2>Files</h2>
-<a href="daily.txt">daily.txt</a><br>
+<a href="files/daily.txt">daily.txt</a><br>
 <a href="feed.xml">feed.xml</a>
 </p>
 <hr>
