--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>Amateur webmaster. Graphic designer. Anti-capitalist. Bad at writing. Likes video games, horror novels, breakfast food, and the internet. Here to share some notes and maybe have a lil fun.</p>
 <hr>
 <h2>About</h2>
-Name: Matt W.<br>
+<p>Name: Matt W.<br>
 Pronouns: He/him<br>
 Birthdate: 1988<br>
 Bloodtype: A+<br>
@@ -20,23 +20,23 @@ Enneatype: 9w1<br>
 Contact: mail [at] mwtext.com</p>
 <hr>
 <h2>Status</h2>
-Reading: Between Two Fires<br>
+<p>Reading: Between Two Fires<br>
 Listening: Refused – The Shape of Punk to Come<br>
 Playing: Grounded + Sludge Life</p>
 <hr>
 <h2>Notes</h2>
-<a href="notes/manifesto.html">Manifesto</a><br>
+<p><a href="notes/manifesto.html">Manifesto</a><br>
 <a href="notes/edc.html">Everyday Carry</a><br>
 <a href="notes/reading.html">Reading</a><br>
 </p>
 <hr>
 <h2>Files</h2>
-<a href="files/daily.txt">daily.txt</a><br>
+<p><a href="daily.txt">daily.txt</a><br>
 <a href="feed.xml">feed.xml</a>
 </p>
 <hr>
 <h2>Exit</h2>
-<a href="links.html">Links</a>
+<p><a href="links.html">Links</a>
 </p>
 <hr>
 <p><i>Updated: 10:21 PM 2023-04-22</i></p>
