--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ Enneatype: 9w1<br>
 Contact: mail [at] mwtext.com</p>
 <hr>
 <h2>Status</h2>
-<p>Reading: Between Two Fires<br>
-Listening: Refused – The Shape of Punk to Come<br>
-Playing: Grounded + Sludge Life</p>
+<p>Reading: Strange Weather by Joe Hill<br>
+Listening: Nine Inch Nails – The Fragile<br>
+Playing: Castlevania: Aria of Sorrow.</p>
 <hr>
 <h2>Notes</h2>
 <p><a href="notes/manifesto.html">Manifesto</a><br>
@@ -39,4 +39,4 @@ Playing: Grounded + Sludge Life</p>
 <p><a href="links.html">Links</a>
 </p>
 <hr>
-<p><i>Updated: 10:21 PM 2023-04-22</i></p>
+<p><i>Updated: 9:53 PM 2023-04-29</i></p>
