--- a/notes/edc.html
+++ b/notes/edc.html
@@ -40,4 +40,9 @@
 
 <hr>
 
+<h2>Water Bottle</h2>
+<p>I got the whole "drink more water" thing down pat. In fact, I probably drink <i>too much</i> water. Mosty out of Nalgene bottles. I have two of them: the nice one for taking to the office, and a beat-up one for casual use. Both are (tastefully) outfitted with stickers. Really like these things. Cheap and durable. Seems like water bottles have been figured out.</p>
+
+<hr>
+
 <p>↑ <a href="#">Back to top</a><br>
