--- a/notes/reading.html
+++ b/notes/reading.html
@@ -16,13 +16,15 @@
 
 <h2>2023</h2>
 
+<p>Between Two Fires<br>Christopher Buehlman<br>★★★★☆</p>
+
 <p>What Moves the Dead<br>T. Kingfisher<br>★★☆☆☆<br></p>
 
 <p>The Hands of Onan<br>Chris DiLeo<br>★☆☆☆☆</p>
 
-<p>The Haunting of Hill House<br>Shirley Jackson<br>★★★☆☆☆</p>
+<p>The Haunting of Hill House<br>Shirley Jackson<br>★★★☆☆</p>
 
-<p>Daphne<br>Josh Malerman<br>★★★☆☆☆</p>
+<p>Daphne<br>Josh Malerman<br>★★★☆☆</p>
 
 <hr>
 
