--- a/links.html
+++ b/links.html
@@ -8,6 +8,7 @@
     
 <h1>Links</h1>
 <p>↩ <a href="index.html">Return to homepage</a></p>
+<p>This page is under construction (of course).</p>
 <hr>
 <h2>Favorites</h2>
 <p><a href="https://thecreativeindependent.com/" target="_blank">The Creative Independent</a><br>
@@ -19,6 +20,7 @@
 <hr>
 <h2>Personal Sites</h2>
 <p><a href="https://sadgrl.online/ " target="_blank">Sadness</a><br>
+<a href="https://xxiivv.com/" target="_blank">XXIIVV</a><br>
 <a href="http://vectorpoem.com/" target="_blank">JP LeBreton</a><br>
 <a href="https://www.bikobatanari.art/" target="_blank">Biko Batanari</a><br>
 <a href="https://tiny-universes.net/" target="_blank">Lulu (Tiny Universes)</a><br>
@@ -30,7 +32,7 @@
 <hr>
 <h2>Webrings</h2>
 <p><a href="https://textonly.website/" target="_blank">textonly.website<br>
-<a href="https://webring.xxiivv.com/" target="_blank">XXIIVV</a><br>
+<a href="https://webring.xxiivv.com/" target="_blank">XXIIVV Webring</a><br>
 <a href="https://emreed.net/LowTech_Directory " target="_blank">LowTech Webring</a></p>
 
 <hr>
