--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <hr>
 <h2>## LATEST</h2>
 <p><b>
-2023-05-01</b>	Missed a day, but 10 in a row isn't too bad. Poking around the XXIIVV wiki. Feeling inspired. Wanna make stuff.
+2023-05-01</b> Poking around the XXIIVV wiki. Feeling inspired. Wanna make stuff.
 </p>
 <p><b>
 2023-04-29</b>	Now playing: Castlevania: Aria of Sorrow.
@@ -71,13 +71,13 @@
 <hr>
 <h2>## ARCHIVE</h2>
 <p>
-* <a href="archive/2023-04.html">April 2023</a>
+* Coming soon</a>
 </p>
 
 <hr>
 <h2>## EXIT</h2>
 <p>
-<p><a href="links.html">LINKS</a>
+<p>* <a href="links.html">Links</a>
 </p>
 <hr>
 <p><i>Updated: 9:45 AM 2023-05-04</i></p>
