--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h2>## STATUS</h2>
 <p>
 * Reading: Strange Weather by Joe Hill<br>
-* Listening: Nine Inch Nails – The Fragile<br>
+* Listening: ClownC0re – Van<br>
 * Playing: Castlevania: Aria of Sorrow</p>
 <hr>
 <h2>## NOTES</h2>
@@ -35,43 +35,46 @@
 <hr>
 <h2>## LATEST</h2>
 <p><b>
+2023-05-04</b> Just gotta say: it fucking sucks that "The White Stripes" (a band that broke up more than 10 years ago) is using using AI to generate new music videos. First Funko Pops, now this. Come on, Jack!
+</p>
+<p><b>
 2023-05-01</b> Poking around the XXIIVV wiki. Feeling inspired. Wanna make stuff.
 </p>
 <p><b>
-2023-04-29</b>	Now playing: Castlevania: Aria of Sorrow.
+2023-04-29</b> Now playing: Castlevania: Aria of Sorrow.
 </p>
 <p><b>
-2023-04-28</b>	Friday. Famicase day! Spending the evening emulating old games and looking up old games to emulate. 
+2023-04-28</b> Famicase day! Spending the evening emulating old games and looking up old games to emulate. 
 </p>
 <p><b>
-2023-04-27</b>	Days flying by. Nice weather, though. Also having a blast with this forum stuff. Take the internet back, for real.
+2023-04-27</b> Days flying by. Nice weather, though. Also having a blast with this forum stuff. Take the internet back, for real.
 </p>
 <p><b>
-2023-04-26</b>	Spending the evening messing around with emulators and watching a video essay on V:TM-B.
+2023-04-26</b> Spending the evening messing around with emulators and watching a video essay on V:TM-B.
 </p>
 <p><b>
-2023-04-25</b>	Another busy day. Need to make time. Listening to a lot of IDLES lately. Do you hear that thunder? 
+2023-04-25</b> Another busy day. Need to make time. Listening to a lot of IDLES lately. Do you hear that thunder? 
 </p>
 <p><b>
-2023-04-24</b>	Monday. Busy. Finished a book last night. And a game tonight. Feels good. Onto the next one.
+2023-04-24</b> Busy. Finished a book last night. And a game tonight. Feels good. Onto the next one.
 </p>
 <p><b>
-2023-04-23</b>	Helped a couple of friends launch a new forum today. It was great! Forums are rad as hell. 
+2023-04-23</b> Helped a couple of friends launch a new forum today. It was great! Forums are rad as hell. 
 </p>
 <p><b>
-2023-04-22</b>	Looking into creating an RSS feed. Might just do it manually, but seems difficult. 
+2023-04-22</b> Looking into creating an RSS feed. Might just do it manually, but seems difficult. 
 </p>
 <p><b>
-2023-04-21</b>	I've decided to move into the haunted castle on the back of the Windows 95 Solitaire cards.
+2023-04-21</b> I've decided to move into the haunted castle on the back of the Windows 95 Solitaire cards.
 </p>
 <p><b>
-2023-04-20</b>	Happy 4/20. Here again, posting stuff on the internet. I dunno, I just think it's neat.
+2023-04-20</b> Happy 4/20. Here again, posting stuff on the internet. I dunno, I just think it's neat.
 </p>
 
 <hr>
 <h2>## ARCHIVE</h2>
 <p>
-* Coming soon</a>
+* Not yet necessary</a>
 </p>
 
 <hr>
