--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <hr>
 <h2>## LATEST</h2>
 <p><b>
-2023-05-04</b> Just gotta say: it fucking sucks that "The White Stripes" (a band that broke up more than 10 years ago) is using using AI to generate new music videos. First Funko Pops, now this. Come on, Jack!
+2023-05-04</b> Just gotta say: it fucking sucks that "The White Stripes" (a band that broke up more than 10 years ago) is using AI to generate new music videos. First Funko Pops, now this. Come on, Jack!
 </p>
 <p><b>
 2023-05-01</b> Poking around the XXIIVV wiki. Feeling inspired. Wanna make stuff.
