--- a/manifesto.html
+++ b/manifesto.html
@@ -1,14 +1,13 @@
 <!doctype html><html lang="en">
-    
 <head>
 <meta charset="utf-8"/><meta content="width=device-width,initial-scale=1" name="viewport">
 <title>mwtext.com - manifesto</title>
-<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
-<link rel="stylesheet" href="../css/style.css">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <h1>Manifesto</h1>
-<p>↩ <a href="../index.html">Return to homepage</a></p>
+<p>↩ <a href="index.html">Return to homepage</a></p>
 <hr>
 <p>For better or worse, I love the internet. I love that there’s a tool that allows us to connect to one another in all sorts of weird and wonderful ways. The fact that we can set up little websites and express ourselves. And that there’s a chance that others may stumble across them and have these tiny, fleeting connections. It's all endlessly appealing. An entire ocean full of messages in bottles. How beautiful!</p>
 
