--- a/edc.html
+++ b/edc.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8"/><meta content="width=device-width,initial-scale=1" name="viewport">
 <title>mwtext.com - edc</title>
 <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
-<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <h1>Everyday Carry</h1>
