--- a/reading.html
+++ b/reading.html
@@ -1,10 +1,9 @@
 <!doctype html><html lang="en">
-    
 <head>
 <meta charset="utf-8"/><meta content="width=device-width,initial-scale=1" name="viewport">
 <title>mwtext.com - reading</title>
-<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
-<link rel="stylesheet" href="../css/style.css">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <h1>Reading Log</h1>
