--- a/index.html
+++ b/index.html
@@ -1,9 +1,47 @@
-<!doctype html><html lang="en">
+<!DOCTYPE html>
+<html lang="de">
 <head>
-<meta charset="utf-8"/><meta content="width=device-width,initial-scale=1" name="viewport">
-<title>mwtext.com</title>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="css/style.css">
+	<title>BSSFGHT.com</title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="grid.css">
+	<meta name="description" content="Nothing to see here.">
 </head>
+<body>
+	<cell span=1-2><small><a href="#">HOME</a></small></cell>
+	<cell span=3-4><small><a href="about.html">ABOUT</a></small></cell>
+	<cell span=5-6><small><a href="https://ko-fi.com/malyzar" target="blank">SUPPORT</a></small></cell>
+	<cell span=1-9><hr></cell>
 
-<h1><br><br><br><br><br>Nothing here yet.</h1>
+	<cell span=1-9><img src="images/bssfght.svg" width="100%"></cell>
+	<cell span=1-9><hr></cell>
+	<cell span=1-4><small>A personal webzine about video games and other stuff.</small></cell>
+	<cell span=6-9><small> Not designed for mobile phones.</small></cell>
+	<cell span=1-9><img src="images/sh3.png" width="100%"></cell>
+
+
+	<cell span=1-2><h4>2023.10.06</h4></cell>
+	<cell span=3-9><h2><a href="test.html">This is a link to a test post.</a></h2></cell>
+	<cell span=1-9><hr></cell>
+
+	<cell span=1-2><h4>2023.10.04</h4></cell>
+	<cell span=3-9><h2><a href="#">Estate Sale: An idea for a sad video game.</a></h2></cell>
+	<cell span=1-9><hr></cell>
+
+	<cell span=1-2><h4>2023.10.01</h4></cell>
+	<cell span=3-9><h2><a href="#">You should know about Starfighter Sanvein.</a></h2></cell>
+	<cell span=1-9><hr></cell>
+
+	<cell span=1-2><h4>2022.12.10</h4></cell>
+	<cell span=3-9><h2><a href="#">New website launch party.</a></h2></cell>
+	<cell span=1-9><hr></cell>
+
+<cell span=1-2><small>Last update: 2023.10.06</small></cell>
+<cell span=3-9><small><i>We're chained to the world and we all gotta pull.</i></small></cell>
+
+
+
+</body>
+
+</html>
