--- a/about.html
+++ b/about.html
@@ -35,8 +35,6 @@
 
 	<cell span=1-9><hr></cell>
 
-
-
 <cell span=1-3><h3>Website Resources</h3>
 <ul>
   <li><a href="https://referi.de/" target="_blank">RE;FERI Grid System</a></li>
@@ -46,9 +44,9 @@
 
 <cell span=4-6><h3>Personal Information</h3>
 <ul>
+  <li>He/him</li>
   <li>Mid-30s</li>
   <li>Graphic Designer</li>
-  <li>Horror hound</li>
 </ul></cell>
 
 <cell span=7-9><h3>Favorite Games</h3>
