--- a/test.html
+++ b/test.html
@@ -21,18 +21,29 @@
 	<cell span=6-9><small> Not designed for mobile phones.</small></cell>
 	<cell span=1-9><hr></cell>
 
-	<cell span=1-9><h1>This is What an Article Looks Like</h2></cell>
+	<cell span=1-9><h1>Launch Party - By Way of Introduction...</h2></cell>
 	<cell span=1-9><img src="images/banner.png" width="100%"></cell>
 
-	<cell span=1-5><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<cell span=1-5><p>Every time I start a new website, I feel the need to explain myself. To kick things off with a stated purpose, a reason for being, some context, and maybe even a welcome message. Essentially, I’m starting this site because I have a deep love for independent, personal websites. I’m an advocate for leaving corporate social media and returning to the personal internet. And there’s no better way to advocate than to <b>build</b>.</p>
 
-<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+<p>It’s a weird time to be online in 2023. Most of the big social media sites have imploded and a huge amount of users have been left scattered to the wind. I deleted my Twitter account after it came under new ownership in late 2022. I know it’s always had a negative reputation, but Twitter had been my platform of choice for like a decade, and it sucked to leave under those circumstances. However, my enthusiasm for the indie web had been growing for the last several years, so I knew there were many other worlds to explore. And watching the last sliver of social media that I cared about go up in flames was motivating, in a way.</p>
+
+<p>Since then, I’ve been spending more and more time in independent internet spaces. Surfing web rings, checking forums, reading people’s thoughts, watching people make stuff. It’s rad. I highly recommend it. And hey, I also want to participate in a greater way. To make my own space. And deciding on a focus for this new space was incredibly easy. It could be nothing but: video games.</p>  
+
+<p>I’ve been playing games regularly for around three decades now. I started out with the home Pong console, which my parents had for unknown reasons. (They weren’t really into video games, so I’m not sure how they ended up with it. The only game my dad ever showed any interest in was Duck Hunt, and that was only for a few minutes. My mom would play Super Mario Kart and Zombies Ate My Neighbors with me, but very little else.)</p>
+
+<p>Aside from regularly telling me to go play outside, my parents always seemed cool with my gaming obsession. We weren’t wealthy by any means, but over the years they managed to surprise me over and over again with new consoles for Christmases and birthdays. My first console was a Nintendo Entertainment System — then Super Nintendo, Nintendo 64, Playstation, and Playstation 2 accordingly. (Although, I now know that the used PS1 my mom bought me had been stolen in a home burglary. Maybe a story for another time!)</p>
+
+<p>I was also lucky to grow up with parents who were hands off when it came to what I was allowed to play. (A rare benefit of a broken home, I guess you could say!) Kid-me could watch all of the Mortal Kombat 2 fatalities that I wanted and shoot demons to my heart’s content. I even had the treasured experience of playing Resident Evil way too young and being terrified by the first zombie encounter. So much so that I turned it off and didn’t play it anymore, sacrificing my one rental opportunity for that weekend.</p>
+
+<p>In adulthood, I’ve typically been years behind the industry’s latest output and tend to avoid hype cycles when I can. Outside of very specific stuff, like Elden Ring or the rare Resident Evil release, I usually focus on retro games (using the 10 year benchmark set in stone by Retronauts) and the occasional indie game. I prefer single-player games and (thanks to that formative experience with Resident Evil) I’m a huge fan of survival horror. This site will likely focus on things like that. Older stuff, spooky stuff, and whatever else happens to get its hooks in me.</p> 
+
+<p>Like other gamers my age, I feel incredibly lucky to have grown up alongside video games. To see them go from 2D to 3D, from a niche hobby to the biggest industry in entertainment. It’s been a hell of a ride. And it’s incredible to have the ability to revisit past eras, to explore early successes and poke at evolutionary dead ends. And of course to occasionally wallow in the sweet pain of nostalgia. There continue to be ups and downs (and occasional crimes against humanity), but goddamn, do <b>I love video games</b>. And I’m excited to get into some specifics. Welcome to BSSFGHT. </p>
 	</cell>
 	
 <cell span=7-9>
-<p>⊕ 2023.10.05<br>
-Game Title Here (YEAR)<br>
-Console Here</p>
+<p>⊕ 2023.10.09<br>
+Fighting under a new banner.</p>
 </cell>
 
 <cell span=1-9><hr></cell>
