--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
 	<cell span=6-9><small> Not designed for mobile phones.</small></cell>
 	<cell span=1-9><hr></cell>
 	<cell span=1-5><h1>About this Website</h1>
-	<p>Hello, my name is Matt. I’m a fan of video games and the indie web, so making an independent website about video games seemed like a good idea. (And great timing, because no one reads blogs anymore!)</p>
+	<p>Hello, my name is Matt and I’m a level 1 pyromancer wielding a reinforced club. I’m a big fan of video games and the indie web, so making an independent website about video games seemed like a great idea. Aside from being a lifelong player of games, I don’t have any real credentials to plug. But I’ve got a lot of enthusiasm, and that’s gotta be enough to have a website, right?</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br><br></p>
+<p>This site is called BSSFGHT because it looks cool and the domain hadn’t yet been taken. It’s a good name! It’s maybe a little aggro, what with those big bold letters and all. But I’m leaning into it. (It can also be viewed as vaguely anti-capitalist, if you try hard enough.) Check out the intro post if you want more backstory and thanks for visiting.<br><br></p>
 
 
 <h3>Support the site with a button:</h3>
@@ -37,16 +37,16 @@
 
 <cell span=1-3><h3>Website Resources</h3>
 <ul>
-  <li><a href="https://referi.de/" target="_blank">RE;FERI Grid System</a></li>
+  <li><a href="https://referi.de/" target="_blank">RE;FERI</a></li>
   <li><a href="https://ditherit.com/" target="_blank">Dither it!</a></li>
-  <li><a href="https://porkbun.com/" target="_blank">Porkbun Hosting</a></li>
+  <li><a href="https://porkbun.com/" target="_blank">Porkbun</a></li>
 </ul></cell>
 
 <cell span=4-6><h3>Personal Information</h3>
 <ul>
   <li>He/him</li>
   <li>Mid-30s</li>
-  <li>Graphic Designer</li>
+  <li>Midwestern</li>
 </ul></cell>
 
 <cell span=7-9><h3>Favorite Games</h3>
