--- a/intro.html
+++ b/intro.html
@@ -24,7 +24,8 @@
 	<cell span=1-9><h1>Launch Party - By Way of Introduction...</h2></cell>
 	<cell span=1-9><img src="images/banner.png" width="100%"></cell>
 
-	<cell span=1-5><p>Every time I start a new website, I feel the need to explain myself. To kick things off with a stated purpose, a reason for being, some context, and maybe even a welcome message. Essentially, I’m starting this site because I have a deep love for independent, personal websites. I’m an advocate for leaving corporate social media and returning to the personal internet. And there’s no better way to advocate than to <b>build</b>.</p>
+	<cell span=1-5>
+<p>Every time I start a new website, I feel the need to explain myself. To kick things off with a stated purpose, a reason for being, some context, and maybe even a welcome message. Essentially, I’m starting this site because I have a deep love for independent, personal websites. I’m an advocate for leaving corporate social media and returning to the personal internet. And there’s no better way to advocate than to <b>build</b>.</p>
 
 <p>It’s a weird time to be online in 2023. Most of the big social media sites have imploded and a huge amount of users have been left scattered to the wind. I deleted my Twitter account after it came under new ownership in late 2022. I know it’s always had a negative reputation, but Twitter had been my platform of choice for like a decade, and it sucked to leave under those circumstances. However, my enthusiasm for the indie web had been growing for the last several years, so I knew there were many other worlds to explore. And watching the last sliver of social media that I cared about go up in flames was motivating, in a way.</p>
 
@@ -38,8 +39,8 @@
 
 <p>In adulthood, I’ve typically been years behind the industry’s latest output and tend to avoid hype cycles when I can. Outside of very specific stuff, like Elden Ring or the rare Resident Evil release, I usually focus on retro games (using the 10 year benchmark set in stone by Retronauts) and the occasional indie game. I prefer single-player games and (thanks to that formative experience with Resident Evil) I’m a huge fan of survival horror. This site will likely focus on things like that. Older stuff, spooky stuff, and whatever else happens to get its hooks in me.</p> 
 
-<p>Like other gamers my age, I feel incredibly lucky to have grown up alongside video games. To see them go from 2D to 3D, from a niche hobby to the biggest industry in entertainment. It’s been a hell of a ride. And it’s incredible to have the ability to revisit past eras, to explore early successes and poke at evolutionary dead ends. And of course to occasionally wallow in the sweet pain of nostalgia. There continue to be ups and downs (and occasional crimes against humanity), but goddamn, do <b>I love video games</b>. And I’m excited to get into some specifics. Welcome to BSSFGHT. </p>
-	</cell>
+<p>Like other gamers my age, I feel incredibly lucky to have grown up alongside video games. To see them go from 2D to 3D, from a niche hobby to the biggest industry in entertainment. It’s been a hell of a ride. And it’s incredible to have the ability to revisit past eras, to explore early successes and poke at evolutionary dead ends. And of course to occasionally wallow in the sweet pain of nostalgia. There continue to be ups and downs (and occasional crimes against humanity), but goddamn, do <b>I love video games</b>. And I’m excited to get into some specifics. Welcome to BSSFGHT.</p>
+</cell>
 	
 <cell span=7-9>
 <p>⊕ 2023.10.09<br>
@@ -48,8 +49,7 @@ Fighting under a new banner.</p>
 
 <cell span=1-9><hr></cell>
 
-<cell span=1-4><p>↵ <a href="#">Return to homepage.</a></p></cell>
-
+<cell span=1-4><p>↵ <a href="index.html">Return to homepage.</a></p></cell>
 
 </body>
 
