--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
 	<cell span=6-9><small> Not designed for mobile phones.</small></cell>
 	<cell span=1-9><hr></cell>
 	<cell span=1-5><h1>About this Website</h1>
-	<p>Hello, my name is Matt and I’m a level 1 pyromancer wielding a reinforced club. I’m a big fan of video games and the indie web, so making an independent website about video games seemed like a great idea. Aside from being a lifelong player of games, I don’t have any real credentials to plug. But I’ve got a lot of enthusiasm, and that’s gotta be enough to have a website, right?</p>
+	<p>Hello, my name is Matt. I’m a big fan of video games and the indie web, so making an independent website about video games seemed like a great idea. Aside from being a lifelong player of games, I don’t have any real credentials to plug. But I’ve got a lot of enthusiasm, and that’s gotta be enough to have a website, right?</p>
 
-<p>This site is called BSSFGHT because it looks cool and the domain hadn’t yet been taken. It’s a good name! It’s maybe a little aggro, what with those big bold letters and all. But I’m leaning into it. (It can also be viewed as vaguely anti-capitalist, if you try hard enough.) Check out the <a href="intro.html">intro</a> post if you want more backstory and thanks for stopping by.<br><br></p>
+<p>This site is called BSSFGHT because it looks cool and the domain hadn’t yet been taken. It’s a good name! It’s maybe a little aggro, what with those big bold letters and all. But I’m leaning into it. (It can also be viewed as vaguely anti-capitalist, if you try hard enough.) Check out <a href="intro.html"><b>the intro post</b></a> if you want more backstory and thanks for stopping by.<br><br></p>
 
 
 <h3>Support the site with a button:</h3>
@@ -35,45 +35,32 @@
 
 	<cell span=1-9><hr></cell>
 
-<cell span=1-3><h3>Website Resources</h3>
-<ul>
-  <li><a href="https://referi.de/" target="_blank">RE;FERI</a></li>
-  <li><a href="https://ditherit.com/" target="_blank">Dither it!</a></li>
-  <li><a href="https://porkbun.com/" target="_blank">Porkbun</a></li>
-</ul></cell>
-
-<cell span=4-6><h3>Personal Information</h3>
+<cell span=1-3><h3>Personal Information</h3>
 <ul>
   <li>He/him</li>
   <li>Mid-30s</li>
   <li>Midwestern</li>
 </ul></cell>
 
-<cell span=7-9><h3>Favorite Games</h3>
+<cell span=4-6><h3>Favorite Games</h3>
 <ul>
-  <li>Dark Souls</li>
-  <li>RE: Make</li>
-  <li>Doom</li>
+   <li>Dark Souls</li>
+   <li>RE: Make</li>
+   <li>Doom</li>
+  
 </ul></cell>
 
-	<cell span=1-9><hr></cell>
+<cell span=7-9><h3>Website Resources</h3>
+<ul>
+  <li><a href="https://referi.de/" target="_blank">RE;FERI</a></li>
+  <li><a href="https://ditherit.com/" target="_blank">Dither it!</a></li>
+  <li><a href="https://porkbun.com/" target="_blank">Porkbun</a></li>
+</ul></cell>
 
-<cell span=1-9><h1>Other places to go.</h2></cell>
-
-<cell span=1-3><p>Title Goes Here</p></cell>
-<cell span=4-9><p>Short description here.</p></cell>
-<cell span=1-9><hr></cell>
-
-<cell span=1-3><p>Title Goes Here</p></cell>
-<cell span=4-9><p>Short description here.</p></cell>
-<cell span=1-9><hr></cell>
-
-<cell span=1-3><p>Title Goes Here</p></cell>
-<cell span=4-9><p>Short description here.</p></cell>
 <cell span=1-9><hr></cell>
 
 <cell span=1-4><p>↵ <a href="index.html">Return to homepage.</a></p></cell>
-
+<cell span=5-9><p>↵ <a href="index.html">Email: info [at] bssfght.com</a></p></cell>
 
 </body>
 
