--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
 
 <cell span=1-9><hr></cell>
 
-<cell span=1-4><p>↵ <a href="index.html">Return to homepage.</a></p></cell>
-<cell span=5-9><p>↵ <a href="index.html">Email: info [at] bssfght.com</a></p></cell>
+<cell span=1-5><p>↵ <a href="index.html">Return to homepage.</a></p></cell>
+<cell span=6-9><small>Contact: info [at] bssfght.com</small></cell>
 
 </body>
 
