--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 <cell span=1-9><hr></cell>
 
 <cell span=1-5><p>↵ <a href="index.html">Return to homepage.</a></p></cell>
-<cell span=6-9><small>Contact: info [at] bssfght.com</small></cell>
+<cell span=6-9><p>Contact: info [at] bssfght.com</p></cell>
 
 </body>
 
