--- a/about.html
+++ b/about.html
@@ -22,12 +22,13 @@
 	<cell span=1-5><h1>About this Website</h1>
 	<p>Hello, my name is Matt. I’m a big fan of video games and the indie web, so making an independent website about video games seemed like a great idea. Aside from being a lifelong player of games, I don’t have any real credentials to plug. But I’ve got a lot of enthusiasm, and that’s gotta be enough to have a website, right?</p>
 
-<p>This site is called BSSFGHT because it looks cool and the domain hadn’t yet been taken. It’s a good name! It’s maybe a little aggro, what with those big bold letters and all. But I’m leaning into it. (It can also be viewed as vaguely anti-capitalist, if you try hard enough.) Check out <a href="intro.html"><b>the intro post</b></a> if you want more backstory and thanks for stopping by.<br><br></p>
-
+<p>This site is called BSSFGHT because it looks cool and the domain hadn’t yet been taken. It’s a good name! It’s maybe a little aggro, what with those big bold letters and all. But I’m leaning into it. (It can also be viewed as vaguely anti-capitalist, if you try hard enough.)</p>
+	
+<p>Check out <a href="intro.html"><b>the intro post</b></a> if you want more backstory and thanks for stopping by.<br><br></p>
 
 <h3>Support the site with a button:</h3>
 
-<p><img src="images/88x31.gif"></p>
+<p><img src="images/88x31.gif"> <img src="images/button.gif"></p>
 
 </cell>
 
