--- a/404.html
+++ b/404.html
@@ -1,12 +1,45 @@
-<!doctype html><html lang="en">
-    
+
+<!DOCTYPE html>
+<html lang="de">
 <head>
-<meta charset="utf-8"/><meta content="width=device-width,initial-scale=1" name="viewport">
-<title>Page not found.</title>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="css/style.css">
+	<title>BSSFGHT.com</title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="grid.css">
+	<meta name="description" content="Nothing to see here.">
+
 </head>
+<body>
+	<cell span=1-2><small><a href="index.html">HOME</a></small></cell>
+	<cell span=3-4><small><a href="about.html">ABOUT</a></small></cell>
+	<cell span=5-6><small><a href="https://ko-fi.com/malyzar" target="blank">SUPPORT</a></small></cell>
+	<cell span=1-9><hr></cell>
+
+	<cell span=1-9><img src="images/bssfght.svg" width="100%"></cell>
+	<cell span=1-9><hr></cell>
+	<cell span=1-4><small>A personal webzine about video games and other stuff.</small></cell>
+	<cell span=6-9><small> Not designed for mobile phones.</small></cell>
+	<cell span=1-9><hr></cell>
+
+	<cell span=1-9><h1>404: Page Not Found</h2></cell>
+	<cell span=1-9><img src="images/404.png" width="100%"></cell>
+
+	<cell span=1-5>
+
+<p>Something has gone terribly wrong. Sorry about that.</p>
     
-<h1>404: Page not found.</h1>
-<p>Sorry, this page does not exist.</p>
-<p>↩ <a href="../index.html">Return to homepage</a></p>
+</cell>
+	
+<cell span=7-9>
+<p>⊕ ████████<br>
+Error: 404</p>
+</cell>
+
+<cell span=1-9><hr></cell>
+
+<cell span=1-4><p>↵ <a href="index.html">Return to homepage.</a></p></cell>
+
+</body>
+
+</html>
