--- a/404.html
+++ b/404.html
@@ -27,13 +27,12 @@
 
 	<cell span=1-5>
 
-<p>Something has gone terribly wrong. Sorry about that.</p>
+<p>Something has gone wrong. Sorry about that.</p>
     
 </cell>
 	
 <cell span=7-9>
-<p>⊕ ████████<br>
-Error: 404</p>
+<p>⊕ ERROR</p>
 </cell>
 
 <cell span=1-9><hr></cell>
