--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<cell span=1-9><img src="images/sh3.png" width="100%"></cell>
 
 
-	<cell span=1-2><h4>2023.10.06</h4></cell>
-	<cell span=3-9><h2><a href="test.html">This is a link to a test post.</a></h2></cell>
+	<cell span=1-2><h4>2023.11.13</h4></cell>
+	<cell span=3-9><h2><a href="silent-hill-3.html">Silent Hill 3 is the best one.</a></h2></cell>
 	<cell span=1-9><hr></cell>
 
 	<cell span=1-2><h4>2023.10.04</h4></cell>
@@ -34,10 +34,10 @@
 	<cell span=1-9><hr></cell>
 
 	<cell span=1-2><h4>2022.12.10</h4></cell>
-	<cell span=3-9><h2><a href="#">New website launch party.</a></h2></cell>
+	<cell span=3-9><h2><a href="intro.html">New website launch party.</a></h2></cell>
 	<cell span=1-9><hr></cell>
 
-<cell span=1-2><small>Last update: 2023.10.06</small></cell>
+<cell span=1-2><small>Last update: 2023.10.13</small></cell>
 <cell span=3-9><small><i>We're chained to the world and we all gotta pull.</i></small></cell>
 
 
