--- a/intro.html
+++ b/intro.html
@@ -21,7 +21,7 @@
 	<cell span=6-9><small> Not designed for mobile phones.</small></cell>
 	<cell span=1-9><hr></cell>
 
-	<cell span=1-9><h1>Launch Party - By Way of Introduction...</h2></cell>
+	<cell span=1-9><h1>New website launch party.</h2></cell>
 	<cell span=1-9><img src="images/banner.png" width="100%"></cell>
 
 	<cell span=1-5>
