--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 	<cell span=1-9><hr></cell>
 
 	<cell span=1-2><h4>2023.10.04</h4></cell>
-	<cell span=3-9><h2><a href="#">Estate Sale: An idea for a sad video game.</a></h2></cell>
+	<cell span=3-9><h2><a href="#">I dislike Alan Wake (and you can, too).</a></h2></cell>
 	<cell span=1-9><hr></cell>
 
 	<cell span=1-2><h4>2023.10.01</h4></cell>
-	<cell span=3-9><h2><a href="#">You should know about Starfighter Sanvein.</a></h2></cell>
+	<cell span=3-9><h2><a href="#">DOOM 3 deserves better.</a></h2></cell>
 	<cell span=1-9><hr></cell>
 
 	<cell span=1-2><h4>2022.12.10</h4></cell>
