--- a/silent-hill-3.html
+++ b/silent-hill-3.html
@@ -27,7 +27,7 @@
 
 	<cell span=1-5>
 
-<p>Post conming soon. Just testing things out.</p>
+<p>Post coming soon. Just testing things out.</p>
     
 </cell>
 	
